syntax="proto3";

option go_package="./client/proto/tasks";


service TaskService {
    rpc CreateTask (TaskRequest) returns (TaskResponse);
    rpc ListTasks (Empty) returns (stream Task);
    rpc CancelTask (CancelRequest) returns (CancelResponse);
}

message TaskRequest {
    string task_description = 1;
}

message TaskResponse {
    string task_id = 1;
    string status = 2;
} 

message Task {
    string id = 1;
    string task_name = 2;
    string started_at =3 ;
}


message CancelRequest {
    string task_id = 1;
}

message CancelResponse {
    string status = 1;
}

message Empty {}